[package]
name = "ha-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "ha_cli"
path = "bin/cli.rs"

[profile.release]
opt-level = 3        # Maximum optimization for speed
lto = "thin"         # Or "fat" for even more optimization, slower linking
codegen-units = 1    # Better optimization, slower compile
panic = "abort"      # Removes unwinding code
strip = "symbols"    # Optional: smaller binary, keeps minimal info
