[package]
name = "ha-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Sachin Kumar <sachinkumar.ar97@gmail.com>"]
description = "A command-line interface (CLI) tool for interacting with Home Assistant."
repository = "https://github.com/sachinkum0009/ha-rs.git"
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.62"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "ha_cli"
path = "bin/cli.rs"

[profile.release]
opt-level = 3        # Maximum optimization for speed
lto = "thin"         # Or "fat" for even more optimization, slower linking
codegen-units = 1    # Better optimization, slower compile
panic = "abort"      # Removes unwinding code
strip = "symbols"    # Optional: smaller binary, keeps minimal info
